<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".StudentsGroupActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="236dp"
            android:layout_marginBottom="@dimen/default_padding"
            android:scaleType="fitXY"
            android:src="@drawable/students1" />
        
        <TextView
            android:id="@+id/grpNumberImageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Група"
            android:layout_gravity="top|end"
            android:textSize="@dimen/default_text_size"/>

        <TextView
            android:id="@+id/facultyNameImageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Факультет"
            android:layout_gravity="bottom|start"
            android:textSize="@dimen/default_text_size"
            android:layout_marginBottom="@dimen/default_padding"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/grp_number_txt"
            android:textSize="@dimen/default_text_size"/>

        <EditText
            android:id="@+id/grpNumberEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="textPersonName"
            android:gravity="center"
            android:hint="K19-2"/>
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faculty_txt"
        android:textSize="@dimen/default_text_size"
        android:layout_marginTop="@dimen/default_padding"/>

    <EditText
        android:id="@+id/facultyEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Комп'ютерних наук"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <TextView android:text="@string/edu_level_txt"/>
            <RadioGroup>
                <RadioButton
                    android:id="@+id/edu_level_bachelor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Бакалавр"/>
                <RadioButton
                    android:id="@+id/edu_level_master"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Магістр"/>
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:text="Додаткові відомості:"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/contract_flg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Наявність контрактників"/>
                <CheckBox
                    android:id="@+id/privilege_flg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Наявність пільговиків" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok_text"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/default_padding"
        android:textSize="@dimen/default_text_size"
        android:onClick="onOkBtnClick"/>
</LinearLayout>